--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "angular-csv-ext": "^1.0.5",
+    "express": "^4.18.1",
     "ngx-google-places-autocomplete": "^2.0.5",
     "notiflix": "^3.2.5",
+    "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
